Last Frontend push

--- a/car_one_plus_front_end/android/app/src/main/AndroidManifest.xml
+++ b/car_one_plus_front_end/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="car_one_plus_front_end"
+        android:label="CarOne"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
