--- a/car_one_plus_front_end/pubspec.yaml
+++ b/car_one_plus_front_end/pubspec.yaml
@@ -21,10 +21,13 @@ dependencies:
   font_awesome_flutter: 10.7.0
   image_picker: ^1.1.2
 
+
   # Communication avec le backend
   http: ^1.2.2
 
   webview_flutter: ^4.2.0
+
+  shimmer: ^3.0.0
 
   # Gestion d’état
   provider: ^6.1.2 # ou
@@ -46,6 +49,11 @@ dependencies:
 
   # Remplacez stripe_flutter par flutter_stripe
   flutter_stripe: ^11.3.0 # ou
+  cached_network_image: ^3.4.1
+  responsive_framework: ^1.5.1
+  flutter_screenutil: ^5.9.3
+  url_launcher: ^6.3.1
+
   # pay: ^1.0.11
 
   # Autres utiles pour un projet mobile
@@ -60,6 +68,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
+  flutter_launcher_icons: ^0.14.3
 
 
 flutter:
@@ -70,3 +79,11 @@ flutter:
     - assets/images/intro_background.png
     - assets/images/google_logo.png
     - assets/images/ferrari.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icone.png"
+  adaptive_icon_background: "#FFFFFF"
+  #adaptive_icon_foreground: "assets/icon/icone_foreground.png"  # Optionnel
+  remove_alpha_ios: true  # Optionnel
